# Tessera

./: .env.example  .gitignore  AGENTS.md  BRANCH_PROTECTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.claude/skills/run-app/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/actions/linux-tauri-deps/: action.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml
.husky/: pre-commit  pre-push
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/e2e/: app-flow.spec.ts
apps/desktop/src/: App.tsx  (+2 more)
apps/server/: Cargo.toml  Dockerfile
apps/server/migrations/: 0002_boards_rls.sql
apps/server/src/: config.rs  error.rs  main.rs
apps/server/src/db/: mod.rs
apps/server/src/middleware/: auth.rs  mod.rs
apps/server/src/models/: activity.rs  board.rs  comment.rs  issue.rs  label.rs  mod.rs  sprint.rs  team.rs  user.rs
apps/server/src/routes/: auth.rs  boards.rs  comments.rs  issues.rs  mod.rs  sprints.rs  teams.rs  ws.rs
apps/server/src/services/: auth_service.rs  board_service.rs  issue_service.rs  mod.rs  team_service.rs  ws_hub.rs
docs/: AGENT_WORKFLOW.md  PROJECT_AUDIT.md  PROJECT_STATUS.md
plan/: ARTIFACT_EXPORT.md  CI_JOB_CONSOLIDATION.md  CONNECTION_SELECT.md  JIRA_INTEGRATION.md  ROADMAP.md  SANDBOX_PYTHON_RUNNER.md  SANDBOX_TEST_RUNNER.md  initial-plan.md  task-divide.md  tech-stack.md
plan/versions/: README.md
tools/scripts/: bootstrap-ollama.ts  pre-push-no-markers.sh  pre-push.sh
(+187 files in other folders)
