[package]
name = "tessera-server"
version = "0.1.0"
edition = "2021"
description = "Tessera Boards API — collaborative project management server"
publish = false

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "migrate",
    "chrono",
    "uuid",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dashmap = "6"
futures = "0.3"

# HTTP middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"
